--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -38,10 +38,8 @@ jobs:
         CI: true
         NODE_ENV: test
         JWT_KEY: ${{ secrets.JWT_KEY }}
-        TEST_DATABASE_URL: mongodb://localhost:27017/crane
+        TEST_DATABASE_URL: mongodb://localhost:27017/revie
         COOKIE_KEY: ${{ secrets.COOKIE_KEY }}
-        SENDGRID_EMAIL: ${{ secrets.SENDGRID_EMAIL }}
-        SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
         API_KEY: ${{ secrets.API_KEY }}
         API_SECRET: ${{ secrets.API_SECRET }}
         CLOUD_NAME: ${{ secrets.CLOUD_NAME }}
